overall code refactor